okd/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dark-patterns-api
  name: dark-patterns-api
spec:
  replicas: 1
  selector:
    matchLabels:
     app: dark-patterns-api        
  template:
    metadata:            
      labels:
        app: dark-patterns-api        
    spec:
      containers:
        - name: dark-patterns-api
          image: jcgardey/dark-patterns:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
