okd/api-service.yaml
kind: Service
apiVersion: v1
metadata:  
  name: api
spec:
  ports:    
    - name: api
      protocol: TCP
      port: 8000
      targetPort: 8000    
  selector:
    app: api
