okd/db-headless-service.yaml
kind: Service
apiVersion: v1
metadata:  
  name: dark-patterns-db
spec:
  ports:    
    - name: dark-patterns-db
      protocol: TCP
      port: 3306
      targetPort: 3306    
  selector:
    app: dark-patterns-db
  clusterIP: None  
  type: ClusterIP
  sessionAffinity: None
